--- a/inputBox/index.html
+++ b/inputBox/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <label for="ageInput">Enter your age:</label>
-    <input type="text" id="ageInput">
-    <button onclick="identifyAgeGroup()">Identify Age Group</button>
-
-    <p class="age-group">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos nostrum molestias corrupti?</p>
-
+    <div class="block">
+        <label for="ageInput">Enter your age:</label>
+        <input type="text" id="ageInput">
+        <button>Identify Age Group</button>
+        <p id="age-group"></p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
